# bluemath

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.logoscope.config.js  webpack.perf.config.js  webpack.publish.js  webpack.test.config.js  webpack.visual.config.js
bmcommon/: package-lock.json  package.json
bmcommon/lib/: ops.js
bmcommon/src/: constants.ts  ndarray.ts  ops.ts
bmcommon/test/: ndarray.ts
common/: README.md  package.json  tsconfig.json  webpack.test.config.js
common/lib/: aabb.d.ts  aabb.js  complex.d.ts  complex.js  constants.d.ts  constants.js  index.d.ts  index.js  ndarray.d.ts  ndarray.js  ops.d.ts  ops.js
common/src/: aabb.ts  complex.ts  index.ts  ndarray.ts  ops.ts  tsconfig.json
common/test/: aabb.ts  index.html  index.ts  ndarray.ts  ops.ts
compgeom/: README.md  package-lock.json  package.json  webpack.test.config.js  webpack.visual.config.js
compgeom/src/: index.ts
compgeom/src/delaunay/: helper.ts  index.ts  triangulation.ts
compgeom/src/topo/: body.ts  edge.ts  eulerops.ts  face.ts  halfedge.ts  idman.ts  index.ts  loop.ts  topology.ts  vertex.ts
compgeom/test/: index.html  index.ts  visual.html  visual.ts
compgeom/test/delaunay/: helper.ts
compgeom/test/topo/: eulerops.ts
doctheme/layouts/: default.hbs
doctheme/partials/: footer.hbs  header.hbs
doctheme/templates/: index.hbs
ext/: lapacklite.d.ts  lapacklite.js
geom/: README.md  package-lock.json  package.json  webpack.glvisual.config.js  webpack.playground.config.js  webpack.test.config.js  webpack.visual.config.js
geom/lib/: index.d.ts
geom/lib/nurbs/: bcurve.d.ts  bcurve.js  bsurf.d.ts  bsurf.js  helper.d.ts  helper.js  index.d.ts  index.js
geom/src/: index.ts
geom/src/nurbs/: bcurve.ts  bsurf.ts  helper.ts  index.ts
geom/test/: glvisual-index.ts  glvisual.html  index.html  index.ts  nurbs-data.ts  nurbs.ts  pgdata.ts  playground-index.ts  playground.html  visual-index.ts  visual.html
lib/: index.d.ts  index.js  ops.d.ts  ops.js  utils.d.ts  utils.js
lib/basic/: bmatrix.d.ts  bmatrix.js  complex.d.ts  complex.js  index.d.ts  index.js  matrix.d.ts  matrix.js  ndarray.d.ts  ndarray.js  pvector.d.ts  pvector.js  vector.d.ts  vector.js  vector2.d.ts  vector2.js  vector3.d.ts  vector3.js
lib/geom/: index.js
lib/geom/nurbs/: bcurve.d.ts  bcurve.js  helper.d.ts  helper.js  index.d.ts  index.js
lib/linalg/: construction.d.ts  construction.js  index.d.ts  index.js  operations.d.ts  operations.js
lib/linalg/blas/: index.js  l1.d.ts  l1.js
lib/linalg/lapack/: blasl1.d.ts  blasl1.js  common.d.ts  common.js  geev.d.ts  geev.js  gelsd.d.ts  gelsd.js  geqrf.d.ts  geqrf.js  gesdd.d.ts  gesdd.js  gesv.d.ts  gesv.js  getrf.d.ts  getrf.js  index.d.ts  index.js  orgqr.d.ts  potrf.d.ts  potrf.js
lib/linalg/lapack/blasl1/: dot.d.ts  dot.js
lib/linalg/lapack/blasl2/: gemv.d.ts  gemv.js
lib/linalg/lapack/blasl3/: gemm.d.ts  gemm.js
lib/optimize/: index.d.ts  index.js  minimize.d.ts  minimize.js
linalg/: README.md  package.json  webpack.test.config.js
linalg/ext/: lapacklite.d.ts  lapacklite.js
linalg/lib/: index.js  ops.d.ts  ops.js
linalg/lib/blas/: index.d.ts  l1.d.ts  l1.js
linalg/lib/lapack/: common.d.ts  common.js  geev.d.ts  geev.js  gelsd.d.ts  gelsd.js  geqrf.d.ts  geqrf.js  gesdd.d.ts  gesdd.js  gesv.d.ts  getrf.d.ts  getrf.js  index.d.ts  index.js  orgqr.d.ts  orgqr.js  potrf.d.ts  potrf.js
linalg/src/: index.ts  ops.ts
linalg/src/blas/: index.ts  l1.ts
linalg/src/lapack/: common.ts  geev.ts  gelsd.ts  geqrf.ts  gesdd.ts  gesv.ts  getrf.ts  index.ts  orgqr.ts  potrf.ts
linalg/test/: index.html  index.ts  lapack.ts  ops.ts
native/: CMakeLists.txt  bmnative-cli.js  bmnative-load.html  bmnative.idl  exported-functions.txt  glue_wrapper.cpp
native/cmake/: FindCppUnit.cmake
native/lapacklite/: CMakeLists.txt  em_xerbla.c  f2c_blas.c  f2c_s_lapack.c
native/ndarray/: AllTests.c  NDArrayTests.c  ndarray.c  ndarray.h
native/ndarray/inc/: ndarray.h
native/ndarray/src/: ndarray.cpp
native/ndarray/test/: main.cpp  ndatest.cpp  ndatest.h
src/: constants.ts  index.md  index.ts  ops.ts  tsconfig.json  utils.ts  vector2.ts
src/basic/: bmatrix.ts  complex.ts  index.ts  matrix.ts  ndarray.ts  pvector.ts  vector.ts  vector2.ts  vector3.ts
src/geom/nurbs/: bcurve.ts  bsurf.ts  helper.ts  index.ts
src/linalg/: construction.ts  index.ts  operations.ts  ops.ts
src/linalg/blas/: l1.ts
src/linalg/lapack/: blasl1.ts  blasl2.ts  blasl3.ts  common.ts  geev.ts  gelsd.ts  geqrf.ts  gesdd.ts  gesv.ts  getrf.ts  index.ts  orgqr.ts  potrf.ts
src/optimize/: index.ts  minimize.ts
test/: emlapack-eigen.js  emlapack-leastsq.js  emlapack-ludecomp.js  emlapack.html  index.html  index.ts  lapacklite.wasm  logoscope.html  logoscope.ts  nurbs-data.ts  ops.ts  perf-index.ts  perf.html  visual-index.ts  visual.html
test/basic/: index.ts  matrix.ts  ndarray.ts  vector.ts
test/geom/: index.ts  nurbs.ts
test/linalg/: blas.ts  construction.ts  index.ts  lapack.ts  operations.ts  ops.ts
test/np/: lstsq.py  test.py
(+11 files in other folders)
